<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:orientation="horizontal"
        android:padding="10dp">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/sound"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:onClick="sound"

            />
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/continuGame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/ripp_red"
            android:onClick="continueGame"
            android:text="@string/continu"
            android:visibility="visible" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/new_game"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/ripp_green"
            android:onClick="new_game"
            android:text="@string/newgame" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/best_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/best"
                android:textColor="@color/colorText"
                android:textSize="25sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/best"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/colorText"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
             android:id="@+id/score_liner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/score_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                android:text="@string/score"
                android:textColor="@color/colorText"
                android:textSize="25sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0"
                android:textColor="@color/colorText"
                android:textSize="25sp" />

        </LinearLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/rippl_blue"
            android:onClick="help"
            android:text="@string/help" />

    </LinearLayout>

</LinearLayout>
