<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/activity_game_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="4">
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ebebeb" />
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/help1_text1"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/negativ_game_help"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ebebeb" />
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/help1_text2"
            android:gravity="center"
            android:textSize="20sp"
            android:text="@string/game_over_help"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#ebebeb" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/help1_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="60dp"
            android:background="@drawable/ripp_green"
            android:text="@string/next"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>
