<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/dialog_liner"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/dialog_text_gameover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/game_over"
        android:textColor="@color/colorText"
        android:textSize="35sp" />

    <LinearLayout
        android:layout_width="232dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/dialog_best_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/best"
            android:textColor="@color/colorText"
            android:textSize="25sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/dialog_best"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/colorText"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="225dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/dialog_score_text"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textColor="@color/colorText"
            android:textSize="25sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/dialog_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            android:textColor="@color/colorText"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:padding="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/dialog_share"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:srcCompat="@drawable/share"

            />

        <android.support.v7.widget.AppCompatImageView
            android:layout_marginLeft="60dp"
            android:id="@+id/dialog_new_game"
            android:layout_width="45dp"
            android:layout_height="45dp"
            app:srcCompat="@drawable/refresh" />
    </LinearLayout>
</LinearLayout>